--- a/girl/index.html
+++ b/girl/index.html
@@ -27,9 +27,9 @@
 			for (var i = 0; i < 50; i++) {
 							random1 = parseInt(Math.random() * 22790 + 1);
 							random2 = parseInt(Math.random() * 9194 + 1);
-							url1 = "https://cdn.jsdelivr.net/gh/1042004021/Imgs/Pictures/" + random1 +
+							url1 = "https://cdn.statically.io/gh/1042004021/Imgs/main/Pictures/" + random1 +
 								".jpg";
-							url2 = "https://cdn.jsdelivr.net/gh/1042004021/Imgs/width/" +
+							url2 = "https://cdn.statically.io/gh/1042004021/Imgs/main/width/" +
 								random2 + ".jpg"
 							var img1 = "<div><a href=" + url1 + " data-caption='标题'><img src=" + url1 +
 								" alt='First image'></a></div>";
@@ -73,9 +73,9 @@ baguetteBox.run('.gallery', {
 						for (var i = 0; i < 20; i++) {
 							random1 = parseInt(Math.random() * 10486 + 1);
 							random2 = parseInt(Math.random() * 4803 + 1);
-							url1 = "https://cdn.jsdelivr.net/gh/1042004021/Imgs/Pictures/" + random1 +
+							url1 = "https://cdn.statically.io/gh/1042004021/Imgs/main/Pictures/" + random1 +
 								".jpg";
-							url2 = "https://cdn.jsdelivr.net/gh/1042004021/Imgs/width/" +
+							url2 = "https://cdn.statically.io/gh/1042004021/Imgs/main/width/" +
 								random2 + ".jpg"
 							var img1 = "<div><a href=" + url1 + " data-caption='标题'><img src=" + url1 +
 								" alt='First image'></a></div>";
